--- a/pyproject.toml
+++ b/pyproject.toml
@@ -14,10 +14,10 @@ dependencies = [
     "torch==2.9.0",
     "torchdata>=0.8.0",
     "torchtitan==0.2.0",
-    "torchmonarch==0.1.2",
+    "torchmonarch==0.1.0",
     "torchstore==0.1.2",
     # vLLM
-    "vllm",
+    # "vllm",
     # Hugging Face integrations
     "datasets>=2.21.0",
     "tokenizers",
